try to fix the margin problem in collapsable-header

--- a/src/scss/components/_collapsable-header.scss
+++ b/src/scss/components/_collapsable-header.scss
@@ -1,6 +1,7 @@
 .collapsable__header {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   padding-top: 10px;
 }
 .fa-collapsable {
@@ -21,7 +22,7 @@
   font-family: $font-second;
   font-size: 18px;
   color: $color-cards-text;
-  margin-right: 140px;
+  /*   margin-right: 140px; */
 }
 .fa-angle-up {
   width: 16px;
